updated models with doc strings

--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -48,14 +48,14 @@
         <ul>
           <li><a href="{% url 'farm:home' %}" class="active">Home</a></li> 
           
-          <li class="dropdown"><a href="#equipment"><span>Equipments</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="{% url 'farm:all_equipments' %}"><span>Equipments</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               {% for cat in equipment_categories %}
               <li><a href="{% url 'farm:equipment_category' cat.slug %}">{{cat}}</a></li>
               {% endfor %}
             </ul>
           </li>
-          <li class="dropdown"><a href="#products"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li class="dropdown"><a href="{% url 'farm:all_products' %}"><span>Products</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               {% for cat in categories %}
               <li><a href="{% url 'farm:products_category' cat.slug %}">{{cat}}</a></li>
