--- a/harvestsaver/accounts/templates/accounts/login.html
+++ b/harvestsaver/accounts/templates/accounts/login.html
@@ -10,7 +10,7 @@
     <div class="container login-bg border">
       <div class="row d-flex justify-content-center align-items-center h-100 pt-2">
         <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          <img src="{% static 'assets/img/quote-bg.jpg' %}"
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
@@ -77,10 +77,10 @@
       </div>
     </div>
     <div
-      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-info">
       <!-- Copyright -->
       <div class="text-white mb-3 mb-md-0">
-        Copyright © 2020. All rights reserved.
+        Copyright © 2023. All rights reserved.
       </div>
       <!-- Copyright -->
   
