--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -95,8 +95,14 @@
   <section id="hero" class="hero d-flex align-items-center">
     <div class="container">
       <div class="row gy-4 d-flex justify-content-between">
+        {%for message in messages%}
+        <div class="bg-danger p-2">
+          <h6>{{message}}</h6>
+        </div>
+        {%endfor%}
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h2 data-aos="fade-up">Welcome to HarvestSaver Network</h2>
+          
           <p data-aos="fade-up" data-aos-delay="100">
             Explore the HarvestSaver Network, your hub for cultivating connections 
             within a community of like-minded individuals. Join us on a journey where 
