--- a/harvestsaver/farm/templates/farm/product_detail.html
+++ b/harvestsaver/farm/templates/farm/product_detail.html
@@ -25,7 +25,7 @@
                         <h6>Farmer: {{product.owner.username}}</h6>
                         <p>Quantity: {{product.quantity}} bags</p>
                     </div>
-                    <div class="">
+                    <div class="product_details">
                         <p>Product: {% if product.is_available%}Available{%else%}Out of stock{%endif%}</p>
                     </div>
                     <hr>
