created classmaxim for test setup

--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -149,6 +149,8 @@
 
         <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
           <img src="{% static 'assets/img/farm-bg.jpg' %}" class="img-fluid mb-3 mb-lg-0" alt="hero image">
+          <h4 class="text-center mt-1">Todays Date: {% now "jS F Y H:i" %}</h4>
+          
         </div>
 
       </div>
