--- a/harvestsaver/farm/templates/farm/equipments.html
+++ b/harvestsaver/farm/templates/farm/equipments.html
@@ -9,7 +9,7 @@
         </div>
         <h5 class="text-center"><a href="{% url 'farm:equipment_category' product.category.slug %}" class="">{{product.category.name}}</a></h5>
         <h3>{{product.name}}</h3>
-        <p>{{product.description}}</p>
+        <p>{{product.description|slice:"0:350"}}</p>
       </div>
     </div>
     {% endfor %}
