fixed bug and the farm payment service

--- a/harvestsaver/farm/templates/farm/product_detail.html
+++ b/harvestsaver/farm/templates/farm/product_detail.html
@@ -23,7 +23,7 @@
                     <p>{{product.description}}</p>
                     <div class="d-flex justify-content-between">
                         <h6>Farmer: {{product.owner.username}}</h6>
-                        <p>Quantity: {{product.quantity}} bags</p>
+                        <p>Quantity: {{product.quantity}} bags/kgs</p>
                     </div>
                     <div class="product_details">
                         <p>Product: {% if product.is_available%}Available{%else%}Out of stock{%endif%}</p>
