--- a/harvestsaver/accounts/templates/accounts/conatact.html
+++ b/harvestsaver/accounts/templates/accounts/conatact.html
@@ -51,7 +51,7 @@
             <p class="text-center text-white">{{message}}</p>
           </div>
           {% endfor %}
-            <form action="{% url 'accounts:contact' %}" method="post" role="form" class="php-email-form">
+            <form action="{% url 'accounts:contact' %}" method="post" role="form">
               {%csrf_token%}
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -67,7 +67,7 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button class="btn btn-primary mt-1" type="submit">Send Message</button></div>
             </form>
           </div>
 
