corrected the equipment upload fields and db relationship

--- a/harvestsaver/accounts/templates/accounts/register.html
+++ b/harvestsaver/accounts/templates/accounts/register.html
@@ -101,7 +101,7 @@
                         <option value="" disabled selected>Choose option</option>
                         <option value="customer">Customer</option>
                         <option value="farmer">Farmer</option>
-                        <option value="equipment owner">Equipment owner</option>
+                        <option value="equipment_owner">Equipment owner</option>
                       </select>
                     </div>
                   </div>
