--- a/harvestsaver/farm/templates/farm/equipment_detail.html
+++ b/harvestsaver/farm/templates/farm/equipment_detail.html
@@ -31,7 +31,7 @@
     </div>
     
     <section id="contact" class="contact">
-        <div class="container overlay-container" id="overlayContainer" data-aos="fade-up">
+        <div class="container overlay-container mt-3 border" id="overlayContainer" data-aos="fade-up">
           <div class="overlay mt-4" id="overlay">
             <div class="m-3">
                 <p class="ms-3">Owner: {{equipment.owner.first_name}} {{equipment.owner.last_name}}</p>
@@ -60,7 +60,7 @@
           </div>
   
         </div>
-      </section><!-- End Contact Section -->
+    </section><!-- End Contact Section -->
 </div>
 
 {% endblock %}
