--- a/harvestsaver/farm/templates/farm/farmer_dashboard.html
+++ b/harvestsaver/farm/templates/farm/farmer_dashboard.html
@@ -7,7 +7,7 @@ Dash board
 {% endblock %}
 
 {% block category %}
-<div class="container-fluid mt-4">
+<div class="container mt-4">
     <h4 class="border-bottom">Dash board</h4>
     <div class="p-2">
         {% for message in messages %}
@@ -25,6 +25,7 @@ Dash board
                 </div>
             </form>
         </div>
+        {%comment%}
         <div class="col-md-8">
             <h5 class="text-center">Weather forecast</h5>
             
@@ -44,6 +45,7 @@ Dash board
             </div>
             {% endfor %}
         </div>
+        {%endcomment%}
     </div>
 </div>
 {% endblock %}
