--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -49,7 +49,13 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="{% url 'farm:home' %}" class="active">Home</a></li> 
+          {%if request.user.is_authenticated%}
+            {%if request.user.is_farmer%}
+              <li><a href="{% url 'farm:farmer_dashboard' %}" class="active">Home</a></li>
+            {%elif request.user.is_equipment_owner%}
+              <li><a href="{% url 'farm:equipment_dashboard' %}" class="active">Home</a></li>
+            {%endif%}
+          {%endif%}
           
           <li class="dropdown"><a href="{% url 'farm:all_equipments' %}"><span>Equipments</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -242,33 +248,45 @@
       <div class="container">
         <div class="section-header">
           <h2 class="text-white">What Our buyers are saying</h2>
-
         </div>
 
         <div class="slides-1 swiper" data-aos="fade-up">
           <div class="swiper-wrapper">
             {% for review in reviews %}
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="{{review.customer.profile.image.url}}" class="testimonial-img" alt="">
-                <h3>{{review.customer.first_name}} {{review.customer.last_name}}</h3>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+
+                  {% if review.customer.profile.image %}
+                    <img src="{{ review.customer.profile.image.url }}" class="testimonial-img" alt="">
+                  {% else %}
+                    <img src="{% static 'assets/img/default-avatar.png' %}" class="testimonial-img" alt="">
+                  {% endif %}
+
+                  <h3>{{ review.customer.first_name }} {{ review.customer.last_name }}</h3>
+
+                  <div class="stars">
+                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                  </div>
+
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    {{ review.review }}
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+
                 </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  {{review.review}}
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
               </div>
-            </div><!-- End testimonial item -->
-            {%empty%}
-            <p>No any reviews</p>
+            {% empty %}
+              <div class="swiper-slide">
+                <p class="text-center text-white">No reviews yet</p>
+              </div>
             {% endfor %}
           </div>
+
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
     </section>
 
