added new features to the equipment dashboard

--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -187,6 +187,8 @@
 
   <script src="{% static 'assets/js/main.js' %}"></script>
   <script src="{% static 'assets/js/more.js' %}"></script>
+  {%block javascript%}
+  {%endblock%}
 
 </body>
 
