--- a/harvestsaver/farm/templates/farm/all_equipments.html
+++ b/harvestsaver/farm/templates/farm/all_equipments.html
@@ -11,7 +11,7 @@ Transport - options
       <div class="section-header">
         <h2>Equipments</h2>
       </div>
-      <div class="row gy-4">
+      <div class="row gy-4 mb-2">
         {% for product in page_object %}
         <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
           <div class="card">
