--- a/harvestsaver/farm/templates/farm/equipment_dashboard.html
+++ b/harvestsaver/farm/templates/farm/equipment_dashboard.html
@@ -13,7 +13,7 @@ Equipment home
 {% block category %}
 <div class="container mt-4">
     <div>
-    <div class="dashboard-header border-bottom bg-white">
+    <div class="dashboard-header bg-white">
     <div class="container-fluid py-3">
 
         <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
@@ -75,7 +75,9 @@ Equipment home
 
     <div id="section-inquiries" class="dashboard-section d-none">
         <div class="col-md-12 card ms-1">
-            <h4 class="p-2 mt-1 bg-info text-center">Pending Inquiries</h4>
+            <div class="m-2">
+                <h4 class="p-2 mt-1 bg-light text-center">Pending Inquiries</h4>
+            </div>
 
             <div class="row border-bottom mb-1">
                 <p class="col-md-3">Equipment</p>
@@ -87,14 +89,14 @@ Equipment home
             </div>
 
             {% for object in inquiry %}
-            <div class="row border-bottom py-1 pe-1">
+            <div class="row  py-1 pe-1">
                 <p class="col-md-3">{{ object.equipment.name|slice:":20" }}</p>
                 <p class="col-md-2">{{ object.customer }}</p>
                 <p class="col-md-2">{{ object.email }}</p>
                 <p class="col-md-2">{{ object.date }}</p>
                 <p class="col-md-2">{{ object.subject|slice:":20" }}</p>
 
-                <a class="col-md-1" href="{% url 'farm:equipment_inquiry' object.equipment.slug %}">
+                <a class="col-md-1" href="{% url 'farm:equipment_inquiry' object.equipment.slug object.pk %}">
                     <button type="button" class="btn btn-primary btn-sm">Respond</button>
                 </a>
             </div>
