--- a/harvestsaver/farm/templates/farm/index.html
+++ b/harvestsaver/farm/templates/farm/index.html
@@ -238,7 +238,7 @@
 
         </div>
 
-       {% include "farm/equipments.html" %}
+       {% include "farm/partials/equipment_grid.html" with equipments=equipments %}
 
       </div>
     </section>
