--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -46,7 +46,13 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="{% url 'farm:home' %}" class="active">Home</a></li> 
+          {%if request.user.is_authenticated%}
+            {%if request.user.is_farmer%}
+              <li><a href="{% url 'farm:farmer_dashboard' %}" class="active">Home</a></li>
+            {%elif request.user.is_equipment_owner%}
+              <li><a href="{% url 'farm:equipment_dashboard' %}" class="active">Home</a></li>
+            {%endif%}
+          {%endif%}
           
           <li class="dropdown"><a href="{% url 'farm:all_equipments' %}"><span>Equipments</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -81,6 +87,7 @@
                 <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i>
             </li>
           </a>
+          <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -124,15 +131,15 @@
             <li><a href="{% url 'farm:home' %}">Home</a></li>
             <li><a href="{% url 'accounts:aboutus' %}">About us</a></li>
             <li><a href="{% url 'accounts:contact' %}">Contact</a></li>
+            <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Products</h4>
-          
           <ul>
             {% for cat in categories %}
-            <li><a href="{% url 'farm:products_category' cat.slug %}">{{cat.name}}</a></li>
+            <li><a href="{% url 'farm:products_category' cat.slug %}">{{cat.name.title}}</a></li>
             {% endfor %}
           </ul>
         </div>
@@ -141,10 +148,9 @@
           <h4>Equipments</h4>
           <ul>
             {% for cat in equipment_categories %}
-            <li><a href="{% url 'farm:equipment_category' cat.slug %}">{{cat.name}}</a></li>
+            <li><a href="{% url 'farm:equipment_category' cat.slug %}">{{cat.name.title}}</a></li>
             {% endfor %}
           </ul>
-          
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
