--- a/harvestsaver/farm/templates/farm/all_equipments.html
+++ b/harvestsaver/farm/templates/farm/all_equipments.html
@@ -1,54 +1,21 @@
 {% extends "accounts/layout.html" %}
 {% load static %}
 
-{% block title%}
-Transport - options
-{%endblock%}
+{% block title %}Transport - options{% endblock %}
 
-{% block category%}
+{% block category %}
 <section id="equipment" class="services pt-0">
     <div class="container mt-4" data-aos="fade-up">
-      <div class="section-header">
-        <h2>Equipments</h2>
-      </div>
-      <div class="row gy-4 mb-2">
-        {% for product in page_object %}
-        <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
-          <div class="card">
-            <div class="card-img">
-              <a href="{% url 'farm:equipment_detail' product.slug%}">
-              <img src="{{product.image.url}}" alt="{% if product.alt%}{{product.alt}}{%else%}product image{%endif%}" class="img-fluid">
-              </a>
-            </div>
-            <h5 class="text-center"><a href="{% url 'farm:equipment_category' product.category.slug %}" class="">{{product.category.name}}</a></h5>
-            <h3>{{product.name}}</h3>
-            <p>{{product.description}}</p>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
 
-    <nav aria-label="Page navigation example">
-      <ul class="pagination justify-content-center">
-          {% if page_object.has_previous %}
-          <li class="page-item"><a class="page-link" href="?page=1">1</a></a></li>
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_object.previous_page_number }}"
-          tabindex="-1" aria-disabled="true" >previous</a>
-        </li>
-        {% endif %}
-        <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">{{page_object.number}}</a>
-        </li>
-        {% if page_object.has_next %}
-        <li class="page-item">
-          <a class="page-link" href="?page={{ page_object.next_page_number }}">Next</a>
-        </li>
-        <lic class="page-item">
-          <a class="page-link" href="?page={{ page_object.paginator.num_pages }}">last &raquo;</a>
-        </li>
-        {%endif%}
-      </ul>
-    </nav>
-  </section>
-{%endblock%}
+        <div class="section-header">
+            <h2>Equipments</h2>
+        </div>
+
+        {% include "farm/partials/equipment_grid.html" with equipments=page_object %}
+
+        {% include "farm/partials/pagination.html" with page_object=page_object %}
+
+    </div>
+</section>
+{% endblock %}
+
