--- a/harvestsaver/farm/templates/farm/equipment_dashboard.html
+++ b/harvestsaver/farm/templates/farm/equipment_dashboard.html
@@ -82,7 +82,6 @@ Equipment home
             <div class="row border-bottom mb-1">
                 <p class="col-md-3">Equipment</p>
                 <p class="col-md-2">Customer</p>
-                <p class="col-md-2">Email</p>
                 <p class="col-md-2">Date</p>
                 <p class="col-md-2">Subject</p>
                 <p class="col-md-1"></p>
@@ -91,10 +90,9 @@ Equipment home
             {% for object in inquiry %}
             <div class="row  py-1 pe-1">
                 <p class="col-md-3">{{ object.equipment.name|slice:":20" }}</p>
-                <p class="col-md-2">{{ object.customer }}</p>
-                <p class="col-md-2">{{ object.email }}</p>
-                <p class="col-md-2">{{ object.date }}</p>
-                <p class="col-md-2">{{ object.subject|slice:":20" }}</p>
+                <p class="col-md-2">{{ object.requester.get_full_name }}</p>
+                <p class="col-md-2">{{ object.created_at }}</p>
+                <p class="col-md-2">{{ object.message|slice:":20" }}...</p>
 
                 <a class="col-md-1" href="{% url 'farm:equipment_inquiry' object.equipment.slug object.pk %}">
                     <button type="button" class="btn btn-primary btn-sm">Respond</button>
