--- a/harvestsaver/farm/templates/farm/equipment_detail.html
+++ b/harvestsaver/farm/templates/farm/equipment_detail.html
@@ -30,37 +30,70 @@
         </div>
     </div>
     
-    <section id="contact" class="contact">
-        <div class="container overlay-container mt-3 border" id="overlayContainer" data-aos="fade-up">
-          <div class="overlay mt-4" id="overlay">
-            <div class="m-3">
-                <p class="ms-3">Owner: {{equipment.owner.first_name}} {{equipment.owner.last_name}}</p>
+<section id="contact" class="contact">
+  <div class="container overlay-container mt-3 border" id="overlayContainer" data-aos="fade-up">
+    <div class="overlay mt-4" id="overlay">
+
+      <div class="m-3">
+        <p class="ms-3">
+          Owner: {{ equipment.owner.first_name }} {{ equipment.owner.last_name }}
+        </p>
+      </div>
+
+      <div>
+        <form
+          action="{% url 'farm:equipment_detail' equipment.slug %}"
+          method="post"
+          role="form"
+          class="contact_owner_form"
+        >
+          {% csrf_token %}
+
+          <!-- Requested rental dates -->
+          <div class="row">
+            <div class="col-md-6 form-group">
+              <input
+                type="date"
+                name="requested_start_date"
+                class="form-control"
+                required
+              >
             </div>
-            <div class="">
-              <form action="{% url 'farm:equipment_detail' equipment.slug %}" method="post" role="form" class="contact_owner_form">
-                {% csrf_token %}
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                  </div>
-                </div>
-                <div class="form-group mt-3">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                </div>
-                <div class="form-group mt-3">
-                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-                </div>
-                <div class="text-center mt-2"><button class="btn btn-primary" type="submit">Send Message</button></div>
-              </form>
+
+            <div class="col-md-6 form-group mt-3 mt-md-0">
+              <input
+                type="date"
+                name="requested_end_date"
+                class="form-control"
+                required
+              >
             </div>
-  
           </div>
-  
-        </div>
-    </section><!-- End Contact Section -->
+
+          <!-- Message -->
+          <div class="form-group mt-3">
+            <textarea
+              class="form-control"
+              name="message"
+              rows="5"
+              placeholder="Write your inquiry message here..."
+              required
+            ></textarea>
+          </div>
+
+          <div class="text-center mt-2">
+            <button class="btn btn-primary" type="submit">
+              Send Inquiry
+            </button>
+          </div>
+
+        </form>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 </div>
 
 {% endblock %}
