--- a/harvestsaver/accounts/templates/accounts/layout.html
+++ b/harvestsaver/accounts/templates/accounts/layout.html
@@ -87,7 +87,62 @@
                 <i class="ps-3 pe-1 bi bi-cart4 text-white cart-icon"></i>
             </li>
           </a>
-          <li><a href="{% url 'accounts:profile' %}">Profile</a></li>
+        {% if user.is_authenticated %}
+        <li class="dropdown profile-simple">
+          <a href="#" class="profile-trigger">
+            <img
+              src="{% static 'assets/img/default-image.jpeg' %}"
+              alt="Profile"
+              class="profile-icon"
+            />
+          </a>
+
+        <ul class=" list-unstyled p-2">
+
+          <!-- Header -->
+          <li class="text-center">
+            <p class="mb-0 fw-semibold">
+              {{ user.first_name|title }} {{ user.last_name|title }}
+            </p>
+            <small class="text-muted">
+              {{ user.role|title }}
+            </small>
+          </li>
+
+          <li><hr class="dropdown-divider"></li>
+
+          <!-- Settings -->
+          <li>
+            <a href="{% url 'accounts:profile' %}" class="dropdown-item d-flex align-items-center">
+              <i class="bi bi-gear me-1 icon-sm"></i>
+              <span>Settings</span>
+            </a>
+
+          </li>
+
+          <!-- Profile -->
+          <li>
+            <a href="{% url 'accounts:profile' %}" class="dropdown-item d-flex align-items-center">
+              <i  class="bi bi-person me-1 icon-sm"></i>
+              <span>Profile</span>
+            </a>
+          </li>
+
+          <li><hr class="dropdown-divider"></li>
+
+          <!-- Logout -->
+            <a href="{% url 'accounts:logout' %}" class="dropdown-item d-flex align-items-center text-danger">
+              <i class="bi bi-box-arrow-right me-1 icon-sm"></i>
+              <span>Sign out</span>
+            </a>
+          </li>
+
+        </ul>
+
+        </li>
+        {% endif %}
+
+
         </ul>
       </nav><!-- .navbar -->
 
