--- a/harvestsaver/accounts/templates/accounts/register.html
+++ b/harvestsaver/accounts/templates/accounts/register.html
@@ -25,7 +25,7 @@
                   <div class="col-md-5 mb-4">
   
                     <div class="form-outline">
-                      <input type="text" name="first_name" class="form-control form-control-lg" />
+                      <input type="text" name="first_name" class="form-control form-control-lg"required />
                       <label class="form-label" for="first_name">First Name</label>
                     </div>
   
@@ -33,7 +33,7 @@
                   <div class="col-md-7 mb-2">
   
                     <div class="form-outline">
-                      <input type="text" name="last_name" class="form-control form-control-lg" />
+                      <input type="text" name="last_name" class="form-control form-control-lg" required />
                       <label class="form-label" for="last_name">Last Name</label>
                     </div>
   
@@ -44,7 +44,7 @@
                   <div class="col-md-5 mb-4 d-flex align-items-center">
   
                     <div class="form-outline datepicker w-100">
-                      <input type="text" class="form-control form-control-lg" name="username" />
+                      <input type="text" class="form-control form-control-lg" name="username" required/>
                       <label for="username" class="form-label">Username</label>
                     </div>
   
@@ -111,6 +111,8 @@
                       <div class="col-md-12">
                         <select class="select form-control-lg" name="country" required >
                           <option value="" disabled selected>Choose Country</option>
+                          <option value="kenya">kenya</option>
+                          {%comment%}
                           <option value="algeria">Algeria</option>
                           <option value="angola">Angola</option>
                           <option value="benin">Benin</option>
@@ -119,10 +121,8 @@
                           <option value="burudi">Burudi</option>
                           <option value="cabo verde">Cabo verde</option>
                           <option value="cameroon">Cameroon</option>
-                          
                           <option value="chad">Chad</option>
                           <option value="comoros">Comoros</option>
-                         
                           <option value="cote d'lvoire">Cote d'lvoire</option>
                           <option value="djiboute">Djiboute</option>
                           <option value="egypt">Egypt</option>
@@ -133,7 +133,6 @@
                           <option value="gambia">Gambia</option>
                           <option value="ghana">Ghana</option>
                           <option value="Guinea">Guinea</option>
-                          <option value="kenya">kenya</option>
                           <option value="lesotho">Lesotho</option>
                           <option value="liberia">Liberia</option>
                           <option value="libya">Libya</option>
@@ -161,6 +160,7 @@
                           <option value="uganda">Uganda</option>
                           <option value="zambia">Zambia</option>
                           <option value="zimbabwe">Zimbabwe</option>
+                          {%endcomment%}
                         </select>
                       </div>
                   </div>
