--- a/harvestsaver/farm/templates/farm/farm/all_products.html
+++ b/harvestsaver/farm/templates/farm/farm/all_products.html
@@ -12,7 +12,7 @@ HarvestSaver Nextwork - Product
         <h2>Products</h2>
       </div>
 
-      {% include "farm/products.html" %}
+      {% include "farm/farm/products.html" %}
 
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
